fix some FindBugs issues